log
Thu 16 May 2024 03:12:38 PM UTC: 
 tests:  0|5
total_score: 0/70
ab9d57e
Thu 16 May 2024 03:45:21 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
ba9daa4
Thu 16 May 2024 03:45:58 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
4088a67
Thu 16 May 2024 03:46:06 PM UTC: 
 sudoku.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  2|4
total_score: 15/70
4a55219
Thu 16 May 2024 03:58:09 PM UTC: 
 sudoku.c | 42 +++++++++++++++++++++++-------------------
 1 file changed, 23 insertions(+), 19 deletions(-)
 tests:  2|4
total_score: 15/70
82b0a32
